syntax = "proto3";

package dg.model;
//交易操作类型
enum OilTradeEventType {
    //未知
    Oil_Trade_Event_Type_Unknown = 0;
    //开始交易
    Oil_Trade_Event_Type_Begin = 1;
    //结束交易
    Oil_Trade_Event_Type_End = 2;
}

//支付类型
enum OilTradePaymentType {
    //未知
    Oil_Trade_Payment_Type_Unknown = 0;
    //卫星
    Oil_Trade_Payment_Type_Wechat = 1;
    //支付宝
    Oil_Trade_Payment_Type_Alipay = 2;
    //银行卡
    Oil_Trade_Payment_Type_Card = 3;
    //现金
    Oil_Trade_Payment_Type_Cash = 4;
}
//油品交易接收对象
message OilTrade {
    //加油站ID
    string OilStationId = 1;
    //交易事件ID
    string EventId = 2;
    //事件时间
    string Timestamp = 3;
    //交易操作类型
    OilTradeEventType EventType = 4;
    //支付类型
    OilTradePaymentType PaymentType = 5;
    //加油枪号
    string OilGunId = 6;
    //油品类型
    string OilType = 7;
    //加油卡卡号
    string OilCardId = 8;
    //限加油车牌
    string LimitPlate = 9;
    //流水号
    string TCCNo = 10;
    //油品代码
    string OilTypeNum = 11;
    //附加信息
    map<string, string> AdditionalInfos = 12;
}
//油品交易推送对象
message OilTradePublish {
    //加油站ID
    string OilStationId = 1;
    //加油枪号
    string OilGunId = 2;
    //事件时间
    string EndTimestamp = 3;
    //流水号
    string TCCNo = 4;
    //油品代码
    string OilTypeNum = 5;
    //限制车牌号
    string LimitVehiclePlate = 6;
    //车牌号
    string VehiclePlate = 7;
    //车辆品牌
    string VehicleBrand = 8;
    //车辆子品牌
    string VehicleSubBrand = 9;
    //车款
    string VehicleStyle = 10;
    //车辆类型
    string VehicleType = 11;
    //车辆颜色
    string VehicleColor = 12;
    //车牌类型
    string VehiclePlateTyle = 13;
    //车牌颜色
    string VehiclePlateColor = 14;
    //图片链接1
    string VehicleImageUrl = 15;
    //图片链接2
    string FaceImageUrl1 = 16;
    //图片链接3
    string FaceImageUrl2 = 17;
    //是否有拍摄到人脸
    string TakeFaceOrNot = 18;
    //是否是员工
    string EmployeeOrNot = 19;
    //收银台是否有人
    string CashierHasPerson = 20;
    //附加信息
    map<string, string> AdditionalInfos = 21;
}
